--- a/profile.html
+++ b/profile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Ratchet Example</title>
+    <title>Profile</title>
     <meta charset="utf-8">
 
     <script src="https://code.jquery.com/jquery-2.2.4.js"></script>
@@ -25,7 +25,11 @@
             border-radius: 20px;
             margin: 10px 0 0 0;
         }
-        .container { margin: auto 2%; }
+        .container {
+            margin: auto 2%;
+            overflow: scroll;
+            height: 90%;
+        }
         #user-image {
             float: left;
             width: 100px;
@@ -38,6 +42,14 @@
         }
         .clear { clear: both; }
         .profile-header { padding: 30px 0 30px 15px; }
+        .biography:before {
+            content: "Bio";
+            font-weight: bold;
+            color: black;
+        }
+        #name { padding: 30px; }
+
+        /*@media screen and (min-width: 360px) {}*/
     </style>
 </head>
 <body>
@@ -50,11 +62,23 @@
             <img src="images/default.gif" id="user-image">
             <div class="name-description">
                 <h2 id="name">Eryk S.</h2>
-                <p id="description">Hello, World!</p>
+                <!-- <p id="description">Hello, World!</p> -->
             </div>
             <div class="clear"></div>
         </div>
 
+        <div id="biography-container">
+            <p class="biography">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+        </div>
+
+        <!-- TODO: Add bottom margin to carousel -->
         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carousel-example-generic" data-slide-to="1" class="active"></li>
@@ -93,11 +117,11 @@
     </div>
 
     <nav class="bar bar-tab">
-        <a class="tab-item active" href="#" style="text-decoration: none;">
+        <a class="tab-item" href="#" style="text-decoration: none;">
             <span class="icon icon-home"></span>
             <span class="tab-label">Home</span>
         </a>
-        <a class="tab-item" href="#" style="text-decoration: none;">
+        <a class="tab-item active" href="#" style="text-decoration: none;">
             <span class="icon icon-person"></span>
             <span class="tab-label">Profile</span>
         </a>
