--- a/discover.html
+++ b/discover.html
@@ -9,9 +9,6 @@
 
     <link rel="stylesheet" type="text/css" href="css/ratchet.min.css">
     <link rel="stylesheet" type="text/css" href="css/ratchet-theme-ios.min.css">
-
-    <!-- https://www.sitepoint.com/ratchets-push-js-prototyping-mobile-apps-multiple-screens/ -->
-    <!-- <script src="js/ratchet.min.js"></script> -->
 </head>
 <body>
     <header class="bar bar-nav" style="position: initial;">
@@ -49,7 +46,7 @@
     </ul>
 
     <nav class="bar bar-tab">
-        <a class="tab-item" href="#">
+        <a class="tab-item" href="genres.html">
             <span class="icon icon-home"></span>
             <span class="tab-label">Home</span>
         </a>
@@ -61,7 +58,7 @@
             <span class="icon icon-star-filled"></span>
             <span class="tab-label">Favorites</span>
         </a>
-        <a class="tab-item" href="tabs.html">
+        <a class="tab-item" href="search.html">
             <span class="icon icon-search"></span>
             <span class="tab-label">Search</span>
         </a>
