--- a/profile.html
+++ b/profile.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
-    <!-- Makes your prototype chrome-less once bookmarked to your phone's home screen -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
@@ -126,7 +125,7 @@
     </div>
 
     <nav class="bar bar-tab">
-        <a class="tab-item" href="#" style="text-decoration: none;">
+        <a class="tab-item" href="genres.html" style="text-decoration: none;">
             <span class="icon icon-home"></span>
             <span class="tab-label">Home</span>
         </a>
@@ -138,7 +137,7 @@
             <span class="icon icon-star-filled"></span>
             <span class="tab-label">Favorites</span>
         </a>
-        <a class="tab-item" href="tabs.html" style="text-decoration: none;">
+        <a class="tab-item" href="search.html" style="text-decoration: none;">
             <span class="icon icon-search"></span>
             <span class="tab-label">Search</span>
         </a>
