--- a/search.html
+++ b/search.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Ratchet Example</title>
+    <title>Search</title>
     <meta charset="utf-8">
 
     <!-- Sets initial viewport load and disables zooming  -->
@@ -33,7 +33,7 @@
         </form>
     </div>
     <nav class="bar bar-tab">
-        <a class="tab-item" href="#">
+        <a class="tab-item" href="genres.html">
             <span class="icon icon-home"></span>
             <span class="tab-label">Home</span>
         </a>
