TODO: resize column height

--- a/genres.html
+++ b/genres.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Grid Layout</title>
+    <title>Genres</title>
     <meta charset="utf-8">
 
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -30,10 +30,7 @@
             min-height: 1px;
             width: 29.5%;
             padding: 12px;
-            /*background-color: #ffdcdc;*/
         }
-
-        /*.outline, .outline * { outline: 1px solid #f6a1a1; }*/
 
         img {
             width: 33.33%;
