--- a/genres.html
+++ b/genres.html
@@ -47,6 +47,15 @@
         .column h4 {
             margin: 0 33.33%;
         }
+
+        @media screen and (min-width: 360px) {
+            img {
+                width: 80%;
+                margin: 0 21%;
+            }
+        }
+
+        @media screen and (min-width: 768px) { img { width: 50%; } }
     </style>
 </head>
 <body>
