--- a/profile.html
+++ b/profile.html
@@ -47,18 +47,21 @@
         #name { padding: 30px; }
 
         @media screen and (max-width: 720px) {
-            .name-description { margin: 0 62% 0 0; } /*0 50% 0 0*/
+            .name-description { margin: 0 62% 0 0; }
             #name { margin: 0 25% 0 0; }
         }
         @media screen and (max-width: 690px) {
             .name-description { margin: 0 35% 0 0; }
             #name { margin: 0 40% 0 0; }
         }
-
         @media screen and (max-width: 360px) {
-            .name-description { margin: 0 -21% 0 0; }
-            #name { padding: 0 45px 0 0; }
+            .name-description { margin: 0 -21% 0 0; } /*margin: 0 -21% 0 0;*/
+            #name {
+                padding: 0 45px 0 0;
+                margin: 0 15% 0 0;
+            }
         }
+        @media screen and (max-height: 640px) { .carousel { margin: 0 0 15% 0; } }
     </style>
 </head>
 <body>
