--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,7 @@
     <title>Profile</title>
     <meta charset="utf-8">
 
-    <script src="https://code.jquery.com/jquery-2.2.4.js"></script>
+    <script src="js/jquery-2.2.4.js"></script>
 
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
