--- a/signin.html
+++ b/signin.html
@@ -10,18 +10,36 @@
     <link rel="stylesheet" type="text/css" href="css/ratchet.min.css">
     <link rel="stylesheet" type="text/css" href="css/ratchet-theme-ios.min.css">
 
+    <script src="js/jquery-2.2.4.js"></script>
+
     <style type="text/css">
         input[type="text"] { margin: 80% 0 0 0; } /* 5% 0 0 0*/
         input[type="password"] { margin: 1em 0 30% 0; }
         #make-account { margin: 20% 0 0 0; }
 
+        #splashscreen {
+            position: absolute;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            background-color: white;
+        }
+
+        .btn { position: unset; }
+
         .container { margin: auto 5%; }
 
-        @media screen and (min-width: 360px) {
+        @media screen and (max-width: 360px) {
             input[type="text"] { margin: 80% 0 0 0; } /* 5% 0 0 0*/
             input[type="password"] { margin: 1em 0 30% 0; }
             #make-account { margin: 20% 0 0 0; }
+            #splashscreen { padding: 40% 0; }
         }
+
+        @media screen and (min-width: 768px) { #splashscreen { padding: 40% 0; } }
+
+        @media screen and (min-width: 1000px) { #splashscreen { padding: 0; } }
 
         @media screen and (min-width: 380px) {
             #make-account { margin: 15% 0 0 0; }
@@ -51,13 +69,22 @@
     </style>
 </head>
 <body>
+    <div id="splashscreen">
+        <center>
+            <img src="images/logo.png" width="50%" height="30%">
+            <h1>Prototype</h1>
+        </center>
+    </div>
     <div class="container">
         <form>
             <input type="text" placeholder="Email or username" name="email-username">
             <input type="password" placeholder="Password" name="password">
             <button class="btn btn-positive btn-block">Sign In</button>
         </form>
-        <center id="make-account"><a href="#">Don't have an account? Sign up here!</a><center>
+        <center id="make-account"><a href="signup.html">Don't have an account? Sign up here!</a><center>
     </div>
 </body>
+<script type="text/javascript">
+    window.onload = window.setTimeout(() => { $("#splashscreen").fadeOut(1000); }, 2000);
+</script>
 </html>
