TODO: sign-in links to app, but need to retrieve information from Firebase

--- a/signin.html
+++ b/signin.html
@@ -79,7 +79,7 @@
         <form>
             <input type="text" placeholder="Email or username" name="email-username">
             <input type="password" placeholder="Password" name="password">
-            <button class="btn btn-positive btn-block">Sign In</button>
+            <a href="genres.html" class="btn btn-positive btn-block">Sign In</a>
         </form>
         <center id="make-account"><a href="signup.html">Don't have an account? Sign up here!</a><center>
     </div>
