TODO: Fix confirm-box dimensions and positions on multiple screens

--- a/signin.html
+++ b/signin.html
@@ -13,7 +13,7 @@
     <script src="js/jquery-2.2.4.js"></script>
 
     <style type="text/css">
-        input[type="text"] { margin: 80% 0 0 0; } /* 5% 0 0 0*/
+        input[type="text"] { margin: 80% 0 0 0; }
         input[type="password"] { margin: 1em 0 30% 0; }
         #make-account { margin: 20% 0 0 0; }
 
@@ -28,10 +28,37 @@
 
         .btn { position: unset; }
 
-        .container { margin: auto 5%; }
+        .container { margin: 0 5%; }
+
+        #seethrough-screen {
+            position: absolute;
+            width: 100%;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            background-color: rgba(0, 0, 0, 0.8);
+            display: none;
+        }
+
+        #confirm-box {
+            position: absolute;
+            width: 15em; /* 60% */
+            height: 15em; /* 40% */
+            top: 25%;
+            left: 25%;
+            background-color: #fff;
+            display: none;
+        }
+
+        #confirm-box h1 {
+            text-align: center;
+            padding: 1em 0; /* 10% 0 */
+        }
+
+        #content { margin: 10%; }
 
         @media screen and (max-width: 360px) {
-            input[type="text"] { margin: 80% 0 0 0; } /* 5% 0 0 0*/
+            input[type="text"] { margin: 80% 0 0 0; }
             input[type="password"] { margin: 1em 0 30% 0; }
             #make-account { margin: 20% 0 0 0; }
             #splashscreen { padding: 40% 0; }
@@ -79,15 +106,101 @@
         <form>
             <input type="text" placeholder="Email or username" name="email-username">
             <input type="password" placeholder="Password" name="password">
-            <a href="genres.html" class="btn btn-positive btn-block">Sign In</a>
         </form>
+        <button onclick="signIn();" class="btn btn-positive btn-block">Sign In</button>
         <center id="make-account"><a href="signup.html">Don't have an account? Sign up here!</a><center>
     </div>
+
+    <div id="seethrough-screen"></div>
+    <div id="confirm-box">
+        <div id="content">
+            <h1 id="message"></h1>
+            <a id="confirm-button" href="#"></a>
+        </div>
+    </div>
 </body>
+<script src="https://www.gstatic.com/firebasejs/3.2.1/firebase.js"></script>
 <script type="text/javascript">
+    var config = {
+        apiKey: "AIzaSyDAnnqD7oGzIHEgeuUq_KIau72H9TbcvSs",
+        authDomain: "prototype-795b9.firebaseapp.com",
+        databaseURL: "https://prototype-795b9.firebaseio.com",
+        storageBucket: "prototype-795b9.appspot.com",
+    };
+
+    firebase.initializeApp(config);
+
+    // var passwordAttempts = 0;
+
+    function signIn() {
+        var email = document.getElementsByTagName("input")[0].value;
+        var password = document.getElementsByTagName("input")[1].value;
+
+        if (email.lenght < 4) {
+            displayPopup("ERROR", "Enter a valid email.");
+            return;
+        }
+
+        if (password.lenght < 4) {
+            displayPopup("ERROR", "Please enter a password.");
+            return;
+        }
+
+        firebase.auth().signInWithEmailAndPassword(email, password).catch(function(error) {
+            if (error.code === "auth/wrong-password")
+                displayPopup("ERROR", "Wrong password.");
+            else
+                displayPopup("ERROR", error.message);
+            console.log(error);
+        });
+
+        displayPopup("SUCCESS", "Welcome!");
+    }
+
+    function sendPasswordReset() {
+        var email = document.getElementsByTagName("input")[0].value;
+        firebase.auth().sendPasswordResetEmail(email).then(function() {
+            displayPopup("ERROR", "Password Reset Email Sent!");
+        }).catch(function(error) {
+            if (error.code === "auth/invalid-email")
+                displayPopup("ERROR", error.message);
+            else if (error.code === "auth/user-not-found")
+                displayPopup("ERROR", error.message);
+            console.log(error);
+        });
+    }
+
+    // TODO: Fix confirm-box dimensions and positions on multiple screens.
+    function displayPopup(type, message) {
+        var msg = document.getElementById("message");
+        var button = document.getElementById("confirm-button");
+        var seethroughScreen = document.getElementById("seethrough-screen");
+        var confirmBox = document.getElementById("confirm-box");
+
+        if (type === "SUCCESS") {
+            msg.innerHTML = message;
+            button.innerHTML = "Continue";
+            button.className = "btn btn-positive btn-block";
+            button.href = "genres.html";
+        } else {
+            msg.innerHTML = message;
+            button.innerHTML = "OK";
+            button.className = "btn btn-negative btn-block";
+            button.href = "#";
+            button.onclick = function() {
+                seethroughScreen.style.display = "none";
+                confirmBox.style.display = "none";
+            }
+        }
+
+        seethroughScreen.style.display = "initial";
+        confirmBox.style.display = "initial";
+    }
+
     function fade() {
         $("#splashscreen").fadeOut(1000);
     }
+
     document.getElementById("splashscreen").addEventListener("click", fade);
     window.onload = window.setTimeout(fade, 2000);
 </script>
