--- a/signup.html
+++ b/signup.html
@@ -9,8 +9,132 @@
 
     <link rel="stylesheet" type="text/css" href="css/ratchet.min.css">
     <link rel="stylesheet" type="text/css" href="css/ratchet-theme-ios.min.css">
+
+    <style type="text/css">
+        .container { padding: 30% 5%; }
+
+        #seethrough-screen {
+            position: absolute;
+            width: 100%;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            background-color: rgba(0, 0, 0, 0.8);
+            display: none;
+        }
+
+        #confirm-box {
+            position: absolute;
+            width: 15em; /* 60% */
+            height: 15em; /* 40% */
+            top: 25%;
+            left: 25%;
+            background-color: #fff;
+            display: none;
+        }
+
+        #confirm-box h1 {
+            text-align: center;
+            padding: 1em 0; /* 10% 0 */
+        }
+
+        #content { margin: 10%; }
+    </style>
 </head>
 <body>
+    <div class="container">
+        <form>
+            <input type="email" name="email" placeholder="Email">
+            <input type="text" name="username" placeholder="Username">
+            <input type="password" name="password" placeholder="Password">
+            <input type="password" name="confirm-password" placeholder="Confirm Password">
+        </form>
+        <button onclick="signUp();" class="btn btn-positive btn-block">Sign Up</button>
+    </div>
 
+    <div id="seethrough-screen"></div>
+    <div id="confirm-box">
+        <div id="content">
+            <h1 id="message"></h1>
+            <a id="confirm-button" href="#"></a>
+        </div>
+    </div>
 </body>
+<script src="https://www.gstatic.com/firebasejs/3.2.1/firebase.js"></script>
+<script type="text/javascript">
+    var config = {
+        apiKey: "AIzaSyDAnnqD7oGzIHEgeuUq_KIau72H9TbcvSs",
+        authDomain: "prototype-795b9.firebaseapp.com",
+        databaseURL: "https://prototype-795b9.firebaseio.com",
+        storageBucket: "prototype-795b9.appspot.com",
+    };
+
+    firebase.initializeApp(config);
+
+    function signUp() {
+        var email = document.getElementsByTagName("input")[0].value;
+        var username = document.getElementsByTagName("input")[1].value;
+        var password = document.getElementsByTagName("input")[2].value;
+        var confirmedPassword = document.getElementsByTagName("input")[3].value;
+
+        if (email.length < 4) {
+            displayPopup("ERROR", "Please enter a valid email");
+            return;
+        }
+
+        if (password === confirmedPassword) {
+            if (confirmedPassword.length < 4) {
+                displayPopup("ERROR", "Password is too short!");
+                return;
+            } else {
+                firebase.auth().createUserWithEmailAndPassword(email, password).catch(function(error) {
+                    if (error.code === "auth/weak-password")
+                        displayPopup("ERROR", "Password is too weak.");
+                    else
+                        displayPopup("ERROR", error.message);
+                    console.log(error);
+                });
+                displayPopup("SUCCESS", "Success!");
+                // sendConfirmationEmail();
+            }
+        } else {
+            displayPopup("ERROR", "Passwords do not match!");
+            return;
+        }
+    }
+
+    // Optional in this case.
+    function sendConfirmationEmail() {
+        firebase.auth().currentUser.sendEmailVerification().then(function() {
+            alert("Email verification sent!");
+        });
+    }
+
+    // TODO: Fix confirm-box dimensions and positions on multiple screens.
+    function displayPopup(type, message) {
+        var msg = document.getElementById("message");
+        var button = document.getElementById("confirm-button");
+        var seethroughScreen = document.getElementById("seethrough-screen");
+        var confirmBox = document.getElementById("confirm-box");
+
+        if (type === "SUCCESS") {
+            msg.innerHTML = message;
+            button.innerHTML = "Continue";
+            button.className = "btn btn-positive btn-block";
+            button.href = "edit.html";
+        } else {
+            msg.innerHTML = message;
+            button.innerHTML = "OK";
+            button.className = "btn btn-negative btn-block";
+            button.href = "#";
+            button.onclick = function() {
+                seethroughScreen.style.display = "none";
+                confirmBox.style.display = "none";
+            }
+        }
+
+        seethroughScreen.style.display = "initial";
+        confirmBox.style.display = "initial";
+    }
+</script>
 </html>
