--- a/profile.html
+++ b/profile.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" type="text/css" href="css/ratchet.min.css">
     <link rel="stylesheet" type="text/css" href="css/ratchet-theme-ios.min.css">
 
+    <script src="js/firebase-3.2.1.js"></script>
+
     <style type="text/css">
         input[type="search"] {
             border-radius: 20px;
@@ -31,7 +33,6 @@
             float: left;
             width: 100px;
             height: 100px;
-            /*border-radius: 100%;*/
         }
         .name-description {
             float: right;
@@ -39,13 +40,13 @@
         }
         .clear { clear: both; }
         .profile-header { padding: 30px 0 30px 15px; }
-        .biography:before {
-            content: "Bio";
+        #biography:before {
+            content: "Bio ";
             font-weight: bold;
             color: black;
         }
         #name { padding: 30px; }
-
+        #album-carousel { display: none; }
         @media screen and (max-width: 720px) {
             .name-description { margin: 0 62% 0 0; }
             #name { margin: 0 25% 0 0; }
@@ -55,7 +56,7 @@
             #name { margin: 0 40% 0 0; }
         }
         @media screen and (max-width: 360px) {
-            .name-description { margin: 0 -21% 0 0; } /*margin: 0 -21% 0 0;*/
+            .name-description { margin: 0 -21% 0 0; }
             #name {
                 padding: 0 45px 0 0;
                 margin: 0 15% 0 0;
@@ -69,28 +70,20 @@
         <h1 class="title">Profile</h1>
     </header>
     <div class="container">
-
         <!-- TODO: Find a way to automatically resize #name right-padding -->
         <div class="profile-header">
             <img src="images/default.gif" id="user-image">
             <div class="name-description">
-                <h2 id="name">Artist Name</h2>
+                <h3 id="name"></h3>
             </div>
             <div class="clear"></div>
         </div>
 
-        <div id="biography-container">
-            <p class="biography">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </p>
+        <div class="biography-container">
+            <p id="biography"></p>
         </div>
 
-        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+        <div id="album-carousel" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carousel-example-generic" data-slide-to="1" class="active"></li>
                 <li data-target="#carousel-example-generic" data-slide-to="2"></li>
@@ -150,4 +143,28 @@
         </a>
     </nav>
 </body>
+<script type="text/javascript">
+    var config = {
+        apiKey: "",
+        authDomain: "",
+        databaseURL: "",
+        storageBucket: "",
+    };
+
+    firebase.initializeApp(config);
+
+    window.onload = function() {
+        var name = document.getElementById("name");
+        var bio = document.getElementById("biography");
+        var carousel = document.getElementById("album-carousel");
+
+        var user = JSON.parse(localStorage.currentUser);
+        name.textContent = user.name;
+        bio.textContent = user.bio;
+        if (user.type !== "artist")
+            carousel.style.display = "none";
+        else
+            carousel.style.display = "initial";
+    };
+</script>
 </html>
