--- a/signin.html
+++ b/signin.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="css/ratchet-theme-ios.min.css">
 
     <script src="js/jquery-2.2.4.js"></script>
+    <script src="js/firebase-3.2.1.js"></script>
 
     <style type="text/css">
         input[type="text"] { margin: 80% 0 0 0; }
@@ -30,7 +31,7 @@
 
         .container { margin: 0 5%; }
 
-        #seethrough-screen {
+        #see-through-screen {
             position: absolute;
             width: 100%;
             top: 0;
@@ -42,8 +43,8 @@
 
         #confirm-box {
             position: absolute;
-            width: 15em; /* 60% */
-            height: 15em; /* 40% */
+            width: 15em;
+            height: 15em;
             top: 25%;
             left: 25%;
             background-color: #fff;
@@ -52,7 +53,7 @@
 
         #confirm-box h1 {
             text-align: center;
-            padding: 1em 0; /* 10% 0 */
+            padding: 1em 0;
         }
 
         #content { margin: 10%; }
@@ -111,7 +112,7 @@
         <center id="make-account"><a href="signup.html">Don't have an account? Sign up here!</a><center>
     </div>
 
-    <div id="seethrough-screen"></div>
+    <div id="see-through-screen"></div>
     <div id="confirm-box">
         <div id="content">
             <h1 id="message"></h1>
@@ -119,18 +120,15 @@
         </div>
     </div>
 </body>
-<script src="https://www.gstatic.com/firebasejs/3.2.1/firebase.js"></script>
 <script type="text/javascript">
     var config = {
-        apiKey: "AIzaSyDAnnqD7oGzIHEgeuUq_KIau72H9TbcvSs",
-        authDomain: "prototype-795b9.firebaseapp.com",
-        databaseURL: "https://prototype-795b9.firebaseio.com",
-        storageBucket: "prototype-795b9.appspot.com",
+        apiKey: "",
+        authDomain: "",
+        databaseURL: "",
+        storageBucket: "",
     };
 
     firebase.initializeApp(config);
-
-    // var passwordAttempts = 0;
 
     function signIn() {
         var email = document.getElementsByTagName("input")[0].value;
@@ -146,15 +144,15 @@
             return;
         }
 
-        firebase.auth().signInWithEmailAndPassword(email, password).catch(function(error) {
+        firebase.auth().signInWithEmailAndPassword(email, password).then(function() {
+            displayPopup("SUCCESS", "Welcome!");
+        }).catch(function(error) {
             if (error.code === "auth/wrong-password")
                 displayPopup("ERROR", "Wrong password.");
             else
                 displayPopup("ERROR", error.message);
             console.log(error);
         });
-
-        displayPopup("SUCCESS", "Welcome!");
     }
 
     function sendPasswordReset() {
@@ -174,7 +172,7 @@
     function displayPopup(type, message) {
         var msg = document.getElementById("message");
         var button = document.getElementById("confirm-button");
-        var seethroughScreen = document.getElementById("seethrough-screen");
+        var seethroughScreen = document.getElementById("see-through-screen");
         var confirmBox = document.getElementById("confirm-box");
 
         if (type === "SUCCESS") {
@@ -182,6 +180,14 @@
             button.innerHTML = "Continue";
             button.className = "btn btn-positive btn-block";
             button.href = "genres.html";
+
+            var uid = ((firebase.auth()).currentUser).uid;
+            firebase.database().ref("/users/" + uid).once("value").then(function(dataSnapshot) {
+                localStorage.currentUser = JSON.stringify(dataSnapshot.val());
+                localStorage.uid = uid;
+                // localStorage.auth = JSON.stringify(firebase.auth());
+                // localStorage.database = JSON.stringify(firebase.database());
+            });
         } else {
             msg.innerHTML = message;
             button.innerHTML = "OK";
