--- a/profile.html
+++ b/profile.html
@@ -1,4 +1,3 @@
-<!-- TODO: Update values to fit name -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -34,34 +33,18 @@
             width: 100px;
             height: 100px;
         }
-        .name-description {
-            float: right;
-            margin: 0 62% 0 0;
-        }
         .clear { clear: both; }
-        .profile-header { padding: 30px 0 30px 15px; }
+        .profile-header { padding: 20px 0; }
         #biography:before {
             content: "Bio ";
             font-weight: bold;
             color: black;
         }
-        #name { padding: 30px; }
+        #name {
+            position: absolute;
+            margin: 30px 0 0 120px;
+        }
         #album-carousel { display: none; }
-        @media screen and (max-width: 720px) {
-            .name-description { margin: 0 62% 0 0; }
-            #name { margin: 0 25% 0 0; }
-        }
-        @media screen and (max-width: 690px) {
-            .name-description { margin: 0 35% 0 0; }
-            #name { margin: 0 40% 0 0; }
-        }
-        @media screen and (max-width: 360px) {
-            .name-description { margin: 0 -21% 0 0; }
-            #name {
-                padding: 0 45px 0 0;
-                margin: 0 15% 0 0;
-            }
-        }
         @media screen and (max-height: 640px) { .carousel { margin: 0 0 15% 0; } }
     </style>
 </head>
@@ -70,7 +53,6 @@
         <h1 class="title">Profile</h1>
     </header>
     <div class="container">
-        <!-- TODO: Find a way to automatically resize #name right-padding -->
         <div class="profile-header">
             <img src="images/default.gif" id="user-image">
             <div class="name-description">
