all pages connect to settings page

--- a/profile.html
+++ b/profile.html
@@ -22,29 +22,37 @@
             border-radius: 20px;
             margin: 10px 0 0 0;
         }
+
         .container {
             margin: auto 2%;
             overflow-x: hidden;
             overflow-y: scroll;
             height: 90%;
         }
+
         #user-image {
             float: left;
             width: 100px;
             height: 100px;
         }
+
         .clear { clear: both; }
+
         .profile-header { padding: 20px 0; }
+
         #biography:before {
             content: "Bio ";
             font-weight: bold;
             color: black;
         }
+
         #name {
             position: absolute;
             margin: 30px 0 0 120px;
         }
+
         #album-carousel { display: none; }
+
         @media screen and (max-height: 640px) { .carousel { margin: 0 0 15% 0; } }
     </style>
 </head>
@@ -119,7 +127,7 @@
             <span class="icon icon-search"></span>
             <span class="tab-label">Search</span>
         </a>
-        <a class="tab-item" href="#" style="text-decoration: none;">
+        <a class="tab-item" href="settings.html" style="text-decoration: none;">
             <span class="icon icon-gear"></span>
             <span class="tab-label">Settings</span>
         </a>
