--- a/discover.html
+++ b/discover.html
@@ -16,7 +16,9 @@
             overflow-y: scroll;
             height: 98%;
         }
+
         .navigate-right::after { content: ' '; }
+
         .lit-button {
             position: absolute;
             top: 30%;
@@ -48,7 +50,7 @@
             <span class="icon icon-search"></span>
             <span class="tab-label">Search</span>
         </a>
-        <a class="tab-item" href="#">
+        <a class="tab-item" href="settings.html">
             <span class="icon icon-gear"></span>
             <span class="tab-label">Settings</span>
         </a>
