--- a/genres.html
+++ b/genres.html
@@ -140,7 +140,7 @@
             <span class="icon icon-search"></span>
             <span class="tab-label">Search</span>
         </a>
-        <a class="tab-item" href="#" style="text-decoration: none;">
+        <a class="tab-item" href="settings.html" style="text-decoration: none;">
             <span class="icon icon-gear"></span>
             <span class="tab-label">Settings</span>
         </a>
